plugins {
	id 'org.springframework.boot' version '3.3.6'
	id 'java'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'medilux'
version = '0.0.1-SNAPSHOT'

//java {
//	toolchain {
//		languageVersion = JavaLanguageVersion.of(17)
//	}
//}

java {
    sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'com.mysql:mysql-connector-j'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'


	// s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	//OAuth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'


}

jar {
	enabled = false
}



tasks.named('test') {
	useJUnitPlatform()
}
